<resources>
    <string name="app_name">Parcial DNT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_cedula">Digitar cedula</string>
    <string name="text_nombre">Digitar nombre</string>
    <string name="text_estrato">Seleccionar estrato</string>
    <string-array name="estrato">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="text_salario">Digitar salario</string>
    <string name="text_nivel">Seleccionar nivel educativo</string>
    <string-array name="nivel">
        <item>Bachillerato</item>
        <item>Pregrado</item>
        <item>Maestria</item>
        <item>Doctorado</item>
    </string-array>
    <string name="boton_guardar">Registrar</string>
    <string name="boton_buscar">Buscar registro</string>
    <string name="boton_actualizar">Actualizar registro</string>
    <string name="boton_eliminar">Eliminar registro</string>
    <string name="boton_listar">Listar</string>
</resources>
