<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cedula"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtcedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nombre"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_estrato"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerestrato"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:entries="@array/estrato"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/text_salario"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtsalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/text_nivel"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnernivel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:entries="@array/nivel"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnguardar"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="37dp"
            android:text="@string/boton_guardar"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btnactualizar"
            app:layout_constraintEnd_toStartOf="@+id/btnlistado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnlistado"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="37dp"
            android:text="@string/boton_listar"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btnbuscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnguardar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnactualizar"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="37dp"
            android:text="@string/boton_actualizar"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btneliminar"
            app:layout_constraintEnd_toStartOf="@+id/btnbuscar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnguardar" />

        <Button
            android:id="@+id/btnbuscar"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="37dp"
            android:text="@string/boton_buscar"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btneliminar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnactualizar"
            app:layout_constraintTop_toBottomOf="@+id/btnlistado" />

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="37dp"
            android:text="@string/boton_eliminar"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnactualizar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
